--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -3,6 +3,9 @@ name: StalinGame
 on:
   push:
     branches: [ master ]
+  # Для автоматического релиза при создании тега
+  tags:
+    - 'v*'
 
 jobs:
   build:
@@ -11,7 +14,7 @@ jobs:
       matrix:
         abi: [ armeabi-v7a, arm64-v8a ]
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildozer
@@ -19,6 +22,8 @@ jobs:
         with:
           command: "android debug"
           workdir: "."
+          # Если нужно, можно указать python версию, например:
+          # python-version: "3.8"
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
@@ -31,46 +36,40 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Download armeabi artifact
+      - name: Download armeabi-v7a APK
         uses: actions/download-artifact@v4
         with:
           name: apk-armeabi-v7a
           path: artifacts/armeabi
 
-      - name: Download arm64 artifact
+      - name: Download arm64-v8a APK
         uses: actions/download-artifact@v4
         with:
           name: apk-arm64-v8a
           path: artifacts/arm64
 
-      - id: create_release
-        name: Create GitHub Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Find built APK file paths
-        run: |
-          echo "ARMV7=$(ls artifacts/armeabi/*.apk | head -n1)" >> $GITHUB_ENV
-          echo "ARM64=$(ls artifacts/arm64/*.apk | head -n1)" >> $GITHUB_ENV
-
-      - name: Upload armeabi to release
+      - name: Upload armeabi-v7a APK to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.ARMV7 }}
-          asset_name: ${{ github.repository }}-armeabi-v7a.apk
+          asset_path: artifacts/armeabi
+          asset_name: stalingame-armeabi-v7a.apk
           asset_content_type: application/vnd.android.package-archive
 
-      - name: Upload arm64 to release
+      - name: Upload arm64-v8a APK to Release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ env.ARM64 }}
-          asset_name: ${{ github.repository }}-arm64-v8a.apk
+          asset_path: artifacts/arm64
+          asset_name: stalingame-arm64-v8a.apk
           asset_content_type: application/vnd.android.package-archive
