--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -2,74 +2,76 @@ name: StalinGame
 
 on:
   push:
-    branches: [ master ]
-  # Для автоматического релиза при создании тега
-  tags:
-    - 'v*'
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        abi: [ armeabi-v7a, arm64-v8a ]
+        abi: [armeabi-v7a, arm64-v8a]
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Docker Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          command: "android debug"
-          workdir: "."
-          # Если нужно, можно указать python версию, например:
-          # python-version: "3.8"
+          python-version: '3.8'
+
+      - name: Install Buildozer dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git unzip openjdk-11-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+
+      - name: Install Buildozer
+        run: pip install buildozer
+
+      - name: Build APK
+        run: |
+          buildozer -v android debug
+        env:
+          # Add any required environment variables here
+          BUILD_OZER_ARMEABI: ${{ matrix.abi == 'armeabi-v7a' && '1' || '0' }}
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: apk-${{ matrix.abi }}
           path: bin/*.apk
+          retention-days: 7
 
   release:
     needs: build
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download armeabi-v7a APK
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
-          name: apk-armeabi-v7a
-          path: artifacts/armeabi
+          path: artifacts
 
-      - name: Download arm64-v8a APK
-        uses: actions/download-artifact@v4
-        with:
-          name: apk-arm64-v8a
-          path: artifacts/arm64
+      - name: Display structure of downloaded files
+        run: ls -R artifacts
 
-      - name: Create GitHub Release
+      - name: Create Release
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
 
-      - name: Upload armeabi-v7a APK to Release
-        uses: actions/upload-release-asset@v1
+      - name: Upload ARMv7 APK
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/armeabi
-          asset_name: stalingame-armeabi-v7a.apk
-          asset_content_type: application/vnd.android.package-archive
+          files: artifacts/apk-armeabi-v7a/*.apk
 
-      - name: Upload arm64-v8a APK to Release
-        uses: actions/upload-release-asset@v1
+      - name: Upload ARM64 APK
+        uses: softprops/action-gh-release@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/arm64
-          asset_name: stalingame-arm64-v8a.apk
-          asset_content_type: application/vnd.android.package-archive
+          files: artifacts/apk-arm64-v8a/*.apk
