--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        abi: [armeabi-v7a, arm64-v8a]
+        abi: [arm64-v8a]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
