--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -35,22 +35,23 @@ jobs:
             zlib1g-dev \
             libncurses5-dev \
             libncursesw5-dev \
-            libtinfo5 \
+            libtinfo-dev \
             cmake \
             libffi-dev \
             libssl-dev \
             python3-pip
 
-      - name: Install Buildozer
-        run: pip install buildozer cython
+      - name: Install Buildozer & Cython
+        run: pip install --upgrade buildozer cython
 
       - name: Build APK
-        run: |
-          buildozer -v android debug
         env:
-          BUILD_OZER_ARMEABI: ${{ matrix.arch == 'armeabi-v7a' && '1' || '0' }}
-          # Set architecture for build
           P4A_ARCH: ${{ matrix.arch }}
+        run: |
+          echo "Building for arch: $P4A_ARCH"
+          # Если вы хотите собирать только указанную архитектуру,
+          # можно передать переменную окружения в p4a:
+          buildozer -v android debug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
