--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -65,29 +65,87 @@ jobs:
         run: pip install --upgrade buildozer cython==0.29.36
 
       # 👉 Автопатч PyJNIus, чтобы исправить ошибки Cython
-      - name: Patch PyJNIus before build
+      - name: Patch PyJNIus before build (robust)
         run: |
-          echo "Preparing PyJNIus patching..."
-          # Запускаем p4a, чтобы Buildozer скачал зависимости (в т.ч. PyJNIus)
+          set -euxo pipefail
+          echo "Calling p4a to trigger downloads (may print warnings)..."
           buildozer android p4a -- --version || true
 
-          echo "Searching for PyJNIus sources..."
-          PJNIUS_PATH=$(find .buildozer -type f -name "jnius_utils.pxi" | head -1 | xargs dirname)
+          echo "Searching for jnius_utils.pxi in .buildozer..."
+          PYJ_FILE=$(find .buildozer -type f -name "jnius_utils.pxi" | head -n1 || true)
+          echo "Found file: '${PYJ_FILE:-<none>}'"
 
-          echo "PyJNIus path: $PJNIUS_PATH"
+          if [ -n "$PYJ_FILE" ]; then
+            PYJ_DIR=$(dirname "$PYJ_FILE")
+            echo "Patching existing PyJNIus in: $PYJ_DIR"
 
-          if [ -d "$PJNIUS_PATH" ]; then
-            echo "Applying PyJNIus FIXES..."
+            # Safety backup
+            cp -v "$PYJ_DIR/jnius_utils.pxi" "$PYJ_DIR/jnius_utils.pxi.bak" || true
+            cp -v "$PYJ_DIR/jnius_conversion.pxi" "$PYJ_DIR/jnius_conversion.pxi.bak" || true
 
-            # Исправление long → int
-            sed -i 's/isinstance(arg, long)/isinstance(arg, int)/g' $PJNIUS_PATH/jnius_utils.pxi
+            # Fix "long" -> "int"
+            sed -i 's/isinstance(arg, long)/isinstance(arg, int)/g' "$PYJ_DIR/jnius_utils.pxi"
 
-            # Исправление типа double → jsize (int)
-            sed -i 's/len(py_bytes) \/ sizeof(jchar) - 1/<int>(len(py_bytes) \/ sizeof(jchar) - 1)/g' $PJNIUS_PATH/jnius_conversion.pxi
+            # Fix division -> integer division + explicit cast to jsize
+            sed -i 's/len(py_bytes) \/ sizeof(jchar) - 1/<int>(len(py_bytes) \/ sizeof(jchar) - 1)/g' "$PYJ_DIR/jnius_conversion.pxi"
 
-            echo "PyJNIus has been patched!"
+            echo "Patched files:"
+            echo "---- jnius_utils.pxi (first 20 lines) ----"
+            head -n 20 "$PYJ_DIR/jnius_utils.pxi" || true
+            echo "---- jnius_conversion.pxi (first 20 lines) ----"
+            head -n 20 "$PYJ_DIR/jnius_conversion.pxi" || true
           else
-            echo "❌ PyJNIus NOT FOUND! Build may fail."
+            echo "PyJNIus sources not found. Creating local-recipes/pyjnius with patches so p4a will use them on download."
+
+            mkdir -p local-recipes/pyjnius/patches
+
+            cat > local-recipes/pyjnius/recipe.py <<'PYRECIPE'
+from pythonforandroid.recipes.pyjnius import PyjniusRecipe as BaseRecipe
+
+class PyjniusFixedRecipe(BaseRecipe):
+    def prebuild_arch(self, arch):
+        print(">>> pyjnius: applying local patches (fix_long, fix_jsize_div)")
+        self.apply_patch("patches/fix_long.patch")
+        self.apply_patch("patches/fix_jsize_div.patch")
+        super().prebuild_arch(arch)
+
+recipe = PyjniusFixedRecipe()
+PYRECIPE
+
+            cat > local-recipes/pyjnius/patches/fix_long.patch <<'PATCH'
+*** Begin Patch
+*** Update File: jnius/jnius_utils.pxi
+@@
+-        if r == 'S' or r == 'I':
+-            if isinstance(arg, int) or (
+-                    (isinstance(arg, long) and arg < 2147483648)):
++        if r == 'S' or r == 'I':
++            # Python3: no `long` type, use int instead (covers long)
++            if isinstance(arg, int) or (
++                    (isinstance(arg, int) and arg < 2147483648)):
+                 score += 10
+                 continue
+*** End Patch
+PATCH
+
+            cat > local-recipes/pyjnius/patches/fix_jsize_div.patch <<'PATCH'
+*** Begin Patch
+*** Update File: jnius/jnius_conversion.pxi
+@@
+-    py_bytes = py_uni.encode('utf-16')
+-    # skip byte-order mark
+-    buff = (<char *>py_bytes) + sizeof(jchar)
+-    j_strlen = len(py_bytes) / sizeof(jchar) - 1
++    py_bytes = py_uni.encode('utf-16')
++    # skip byte-order mark
++    buff = (<char *>py_bytes) + sizeof(jchar)
++    # use integer division and explicit cast to jsize to avoid double -> int
++    j_strlen = <jsize>(len(py_bytes) // sizeof(jchar) - 1)
+*** End Patch
+PATCH
+
+            echo "Created local-recipes/pyjnius with patches:"
+            ls -R local-recipes/pyjnius || true
           fi
 
       - name: Create fake libSDL.so shim
