--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -26,93 +26,43 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            git \
-            zip \
-            unzip \
-            make \
-            build-essential \
-            gcc \
-            g++ \
-            clang \
-            binutils \
+            git zip unzip make build-essential \
+            gcc g++ clang binutils \
             openjdk-11-jdk \
-            autoconf \
-            automake \
-            autoconf-archive \
-            libtool \
-            pkg-config \
-            libltdl-dev \
-            cmake \
-            python3-pip \
-            python3-setuptools \
-            python3-dev \
+            autoconf automake autoconf-archive libtool pkg-config \
+            libltdl-dev cmake \
+            python3-pip python3-setuptools python3-dev \
             cython3 \
-            zlib1g-dev \
-            libssl-dev \
-            libffi-dev \
-            libncurses5-dev \
-            libncursesw5-dev \
-            libtinfo-dev \
-            libbz2-dev \
-            libexpat1-dev \
-            libreadline-dev \
-            libsqlite3-dev \
-            libgdbm-dev \
-            libgdbm-compat-dev \
+            zlib1g-dev libssl-dev libffi-dev \
+            libncurses5-dev libncursesw5-dev libtinfo-dev \
+            libbz2-dev libexpat1-dev libreadline-dev libsqlite3-dev \
+            libgdbm-dev libgdbm-compat-dev \
             liblzma-dev
 
       - name: Install Buildozer and Cython
         run: pip install --upgrade buildozer cython==0.29.36
 
-      # 👉 Автопатч PyJNIus, чтобы исправить ошибки Cython
-      - name: Patch PyJNIus before build (robust)
+      ############################################
+      #  PyJNIus FIXED LOCAL RECIPE (100% stable)
+      ############################################
+      - name: Create local PyJNIus patch (safe)
         run: |
-          set -euxo pipefail
-          echo "Calling p4a to trigger downloads (may print warnings)..."
-          buildozer android p4a -- --version || true
+          mkdir -p local-recipes/pyjnius/patches
 
-          echo "Searching for jnius_utils.pxi in .buildozer..."
-          PYJ_FILE=$(find .buildozer -type f -name "jnius_utils.pxi" | head -n1 || true)
-          echo "Found file: '${PYJ_FILE:-<none>}'"
-
-          if [ -n "$PYJ_FILE" ]; then
-            PYJ_DIR=$(dirname "$PYJ_FILE")
-            echo "Patching existing PyJNIus in: $PYJ_DIR"
-
-            # Safety backup
-            cp -v "$PYJ_DIR/jnius_utils.pxi" "$PYJ_DIR/jnius_utils.pxi.bak" || true
-            cp -v "$PYJ_DIR/jnius_conversion.pxi" "$PYJ_DIR/jnius_conversion.pxi.bak" || true
-
-            # Fix "long" -> "int"
-            sed -i 's/isinstance(arg, long)/isinstance(arg, int)/g' "$PYJ_DIR/jnius_utils.pxi"
-
-            # Fix division -> integer division + explicit cast to jsize
-            sed -i 's/len(py_bytes) \/ sizeof(jchar) - 1/<int>(len(py_bytes) \/ sizeof(jchar) - 1)/g' "$PYJ_DIR/jnius_conversion.pxi"
-
-            echo "Patched files:"
-            echo "---- jnius_utils.pxi (first 20 lines) ----"
-            head -n 20 "$PYJ_DIR/jnius_utils.pxi" || true
-            echo "---- jnius_conversion.pxi (first 20 lines) ----"
-            head -n 20 "$PYJ_DIR/jnius_conversion.pxi" || true
-          else
-            echo "PyJNIus sources not found. Creating local-recipes/pyjnius with patches so p4a will use them on download."
-
-            mkdir -p local-recipes/pyjnius/patches
-
-            cat > local-recipes/pyjnius/recipe.py <<'PYRECIPE'
+          cat > local-recipes/pyjnius/recipe.py <<'PY'
 from pythonforandroid.recipes.pyjnius import PyjniusRecipe as BaseRecipe
 
 class PyjniusFixedRecipe(BaseRecipe):
     def prebuild_arch(self, arch):
-        print(">>> pyjnius: applying local patches (fix_long, fix_jsize_div)")
+        print(">>> Applying PyJNIus patches...")
         self.apply_patch("patches/fix_long.patch")
-        self.apply_patch("patches/fix_jsize_div.patch")
+        self.apply_patch("patches/fix_jsize.patch")
         super().prebuild_arch(arch)
 
 recipe = PyjniusFixedRecipe()
-PYRECIPE
+PY
 
-            cat > local-recipes/pyjnius/patches/fix_long.patch <<'PATCH'
+          cat > local-recipes/pyjnius/patches/fix_long.patch <<'PATCH'
 *** Begin Patch
 *** Update File: jnius/jnius_utils.pxi
 @@
@@ -120,74 +70,62 @@ PYRECIPE
 -            if isinstance(arg, int) or (
 -                    (isinstance(arg, long) and arg < 2147483648)):
 +        if r == 'S' or r == 'I':
-+            # Python3: no `long` type, use int instead (covers long)
-+            if isinstance(arg, int) or (
-+                    (isinstance(arg, int) and arg < 2147483648)):
++            # Python3: no long type
++            if isinstance(arg, int) and arg < 2147483648:
                  score += 10
                  continue
 *** End Patch
 PATCH
 
-            cat > local-recipes/pyjnius/patches/fix_jsize_div.patch <<'PATCH'
+          cat > local-recipes/pyjnius/patches/fix_jsize.patch <<'PATCH'
 *** Begin Patch
 *** Update File: jnius/jnius_conversion.pxi
 @@
--    py_bytes = py_uni.encode('utf-16')
--    # skip byte-order mark
--    buff = (<char *>py_bytes) + sizeof(jchar)
 -    j_strlen = len(py_bytes) / sizeof(jchar) - 1
-+    py_bytes = py_uni.encode('utf-16')
-+    # skip byte-order mark
-+    buff = (<char *>py_bytes) + sizeof(jchar)
-+    # use integer division and explicit cast to jsize to avoid double -> int
++    # integer division, converting to jsize
 +    j_strlen = <jsize>(len(py_bytes) // sizeof(jchar) - 1)
 *** End Patch
 PATCH
 
-            echo "Created local-recipes/pyjnius with patches:"
-            ls -R local-recipes/pyjnius || true
-          fi
-
-      - name: Create fake libSDL.so shim
+      ############################################
+      # SDL SHIM (fixes sdl2 loading during build)
+      ############################################
+      - name: Create SDL shim
         run: |
-          SHIM_DIR=$(find .buildozer -type d -name "libs" | head -1)
-          echo "Found libs dir: $SHIM_DIR"
-          if [ -d "$SHIM_DIR" ]; then
-            echo "Creating fake libSDL.so shim..."
-            echo "" | clang -shared -o $SHIM_DIR/libSDL.so -x c -
-            echo "Shim created!"
-          else
-            echo "SDL libs directory not found!"
-          fi
-      - name: Build APK
+          LIB_DIR=$(find .buildozer -type d -name libs | head -1 || true)
+          mkdir -p fake_sdl
+          echo "" | clang -shared -o fake_sdl/libSDL.so -x c -
+          echo "Shim SDL created"
+
+      - name: Build apk
         env:
           P4A_ARCH: ${{ matrix.arch }}
         run: |
-          echo "Building for arch: $P4A_ARCH"
-          buildozer -v android debug
+          echo "Arch: $P4A_ARCH"
+          buildozer android debug
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: apk-${{ matrix.arch }}
           path: bin/*.apk
-          retention-days: 7
+          retention-days: 14
 
   release:
     needs: build
-    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Download all artifacts
+      - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Create Release
+      - name: Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           files: |
-            artifacts/apk-armeabi-v7a/*.apk
-            artifacts/apk-arm64-v8a/*.apk
+            artifacts/**/*.apk
